# sams-manifest-complier

./: Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
resources/: icon.ai
src/: main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  err.rs  lib.rs  main.rs  manifest_parser.rs
src/assets/components/: DragDropArea.tsx  Navigation.tsx  SelectCategoriesToExport.tsx
src/assets/pages/: Home.tsx
src/assets/ts/: manifest_parser.ts
