[package]
name = "sams_manifest_compiler"
version = "0.0.0"
description = "A compiler for the sams club manifest files to a unified table"
authors = ["Drew Chase"]
edition = "2024"


[lib]
name = "sams_manifest_compiler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
csv = { version = "1.3.1" }
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = {version = "2.0.12"}
